# simd_par_bench

./: Cargo.toml  README.md
benches/: ndarray.rs  simd_rayon.rs
src/: lib.rs  main.rs
