[package]
name = "simd_par_bench"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[dependencies]
rayon = "1.3.0"
simdeez = "1.0.0"
rand = "0.7.3"
ndarray = { version = "0.13.1", features = ["rayon"] }
rand_xorshift = "0.2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simd_rayon"
harness = false

[[bench]]
name = "ndarray"
harness = false
